--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.9.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -18,7 +19,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "eslintConfig": {
     "root": true,
