--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "axios": "^0.19.0"
   },
   "eslintConfig": {
     "root": true,
