--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
     "axios": "^0.19.0",
-    "js-base64": "^2.5.1"
+    "js-base64": "^2.5.1",
+    "moment": "^2.24.0"
   },
   "eslintConfig": {
     "root": true,
@@ -34,7 +35,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {"no-console":"off"},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
